tests/ui/exhaustive/switch_missing_arg.lm
enum Foo {
    A(Int32, Int32),
}

fn foo(f: Foo) -> Int32 {
    switch f {
        Foo::A(a) => 4_i32,
    }
}
